--- a/Data Cleaning on Superheroes Dataset.ipynb
+++ b/Data Cleaning on Superheroes Dataset.ipynb
@@ -708,7 +708,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>top</td>\n",
-       "      <td>Rip Hunter</td>\n",
+       "      <td>Hulk</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -760,11 +760,11 @@
        "</div>"
       ],
       "text/plain": [
-       "        hero_names Agility Accelerated Healing Lantern Power Ring  \\\n",
-       "count          667     667                 667                667   \n",
-       "unique         667       2                   2                  2   \n",
-       "top     Rip Hunter   False               False              False   \n",
-       "freq             1     425                 489                656   \n",
+       "       hero_names Agility Accelerated Healing Lantern Power Ring  \\\n",
+       "count         667     667                 667                667   \n",
+       "unique        667       2                   2                  2   \n",
+       "top          Hulk   False               False              False   \n",
+       "freq            1     425                 489                656   \n",
        "\n",
        "       Dimensional Awareness Cold Resistance Durability Stealth  \\\n",
        "count                    667             667        667     667   \n",
@@ -1263,7 +1263,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ffd9ce68a10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f853cd40bd0>"
       ]
      },
      "execution_count": 14,
