--- a/Data Cleaning on Superheroes Dataset.ipynb
+++ b/Data Cleaning on Superheroes Dataset.ipynb
@@ -708,7 +708,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>top</td>\n",
-       "      <td>Hulk</td>\n",
+       "      <td>Sasquatch</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -763,7 +763,7 @@
        "       hero_names Agility Accelerated Healing Lantern Power Ring  \\\n",
        "count         667     667                 667                667   \n",
        "unique        667       2                   2                  2   \n",
-       "top          Hulk   False               False              False   \n",
+       "top     Sasquatch   False               False              False   \n",
        "freq            1     425                 489                656   \n",
        "\n",
        "       Dimensional Awareness Cold Resistance Durability Stealth  \\\n",
@@ -1256,6 +1256,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create two new dataframes separated by male and female, then create scatter plots on top of each other comparing male superheroes heights and weights & female superheroes heights and weights."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1263,7 +1270,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f853cd40bd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f868ec3c250>"
       ]
      },
      "execution_count": 14,
@@ -1292,6 +1299,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function to create a distribution plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1304,6 +1318,13 @@
     "    plt.xlabel(column_name)\n",
     "    plt.ylabel('Probability Density')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use `show_distplot` function to create a visual for male superhero height, then utilize two `print` statements to calculate mean and median height."
    ]
   },
   {
